assets/css/styles.css
/* ... */
/*=============== QUALIFICATION ===============*/
.qualification {
  position: relative;
}

.qualification__container {
  row-gap: 3.5rem;
}

.qualification__title {
  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: .5rem;
  font-size: var(--small-font-size);
  font-weight: var(--font-semi-bold);
  margin-bottom: 2rem;
}

.qualification__title i {
  font-size: 1rem;
  font-weight: initial;
}

.qualification__info {
  display: grid;
  row-gap: 2rem;
}

.qualification__name {
  font-size: var(--normal-font-size);
  margin-bottom: 1.25rem;
}

.qualification__country, 
.qualification__year {
  display: block;
  font-size: var(--small-font-size);
  color: var(--text-color-light);
}

.qualification__country {
  margin-bottom: .75rem;
}

.qualification__img {
  width: 150px;
  position: absolute;
  right: -3rem;
  bottom: 12rem;
  transform: rotate(15deg);
  opacity: .1;
}

/*=============== SERVICES ===============*/
.services__container {
  row-gap: 2.5rem;
  justify-content: center;
}

.services__card {
  position: relative;
  width: 228px;
  height: 322px;
  background-color: var(--container-color);
  text-align: center;
  padding: 3.5rem 1rem;
  border-radius: 7.25rem;
  transition: background .4s; /* For dark mode animation */
}

.services__card i {
  display: block;
  font-size: 2rem;
  color: var(--title-color);
  margin-bottom: .75rem;
  transition: transform .8s;
}

.services__title {
  font-size: var(--h2-font-size);
  font-weight: var(--font-semi-bold);
  margin-bottom: 1.5rem;
}

.services__border {
  width: 248px;
  height: 342px;
  border: 1.8px solid var(--text-color-light);
  border-radius: 7.75rem;
  position: absolute;
  inset: 0;
  left: -10px;
  margin: auto;
  z-index: -1;
  transition: opacity .6s;
  opacity: 0;
}

.services__card:hover i {
  transform: rotateY(360deg);
}

.services__card:hover .services__border {
  opacity: 1;
}

/*=============== PROJECTS ===============*/
.projects__container {
  overflow: initial;
}

.projects__content {
  display: grid;
  justify-content: center;
}

.projects__img {
  width: 250px;
  border-radius: .75rem;
  margin-bottom: 1.25rem;
}

.projects__subtitle {
  font-size: var(--small-font-size);
  color: var(--text-color-light);
}

.projects__title {
  font-size: var(--h2-font-size);
  margin-bottom: 1.25rem;
  margin: .5rem 0 1.25rem;
}

.projects__button {
  display: inline-flex;
  align-items: center;
  column-gap: .5rem;
  color: var(--title-color);
  font-size: var(--small-font-size);
}

.projects__button i {
  font-size: 1rem;
  transition: transform .3s;
}

.projects__button:hover i {
  transform: translateX(.25rem);
}

/* Swiper class */
.projects__container .swiper-button-prev::after,
.projects__container .swiper-button-next::after {
  content: '';
}

.projects__container .swiper-button-prev,
.projects__container .swiper-button-next {
  width: initial;
  height: initial;
  margin: initial;
  font-size: 2.5rem;
  color: var(--title-color);
}

.projects__container .swiper-button-prev {
  left: -1rem;
  top: 4.5rem;
}

.projects__container .swiper-button-next {
  right: -1rem;
  top: 4.5rem;
}

.projects__container .swiper-slide {
  margin-bottom: 4.5rem;
}

.projects__container .swiper-pagination-bullets {
  bottom: 0;
}

.projects__container .swiper-pagination-bullet {
  background-color: var(--text-color-light);
  opacity: initial;
}

.projects__container .swiper-pagination-bullet-active {
  background-color: var(--title-color);
}

/*=============== TESTIMONIAL ===============*/
.testimonial {
  position: relative;
}

.testimonial__content {
  text-align: center;
}

.testimonial__description {
  font-family: var(--title-font);
  color: var(--title-color);
  margin-bottom: 1.5rem;
}

.testimonial__name {
  font-family: var(--body-font);
  font-size: var(--small-font-size);
  margin-bottom: .25rem;
}

.testimonial__subtitle {
  font-size: var(--smaller-font-size);
  color: var(--text-color-light);
}

.testimonial__img {
  width: 70px;
  transform: rotate(30deg);
  position: absolute;
  top: 5rem;
  right: -1.5rem;
  opacity: .1;
}

/* Swiper class */
.testimonial__container .swiper-slide {
  margin-bottom: 4rem;
}

.testimonial__container .swiper-button-prev:after,
.testimonial__container .swiper-button-next:after {
  content: '';
}

.testimonial__container .swiper-button-next,
.testimonial__container .swiper-button-prev {
  font-size: 2rem;
  color: var(--title-color);
  width: initial;
  height: initial;
  top: initial;
  bottom: .5rem;
}

.testimonial__container .swiper-button-prev {
  left: calc(50% - 3rem);
}

.testimonial__container .swiper-button-next {
  right: calc(50% - 3rem);
}

.testimonial__container .swiper-button-disabled {
  opacity: initial;
  color: var(--text-color-light);
}

/*=============== CONTACT ===============*/
.contact__content{
  margin-left: 8rem;
}

.contact__container {
  row-gap: 3.5rem;
}

.contact__title {
  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: .5rem;
  font-size: var(--small-font-size);
  font-weight: var(--font-semi-bold);
  margin-bottom: 2.5rem;
}

.contact__title i {
  font-size: 1rem;
  font-weight: initial;
}

.contact__info, 
.contact__data, 
.contact__form {
  display: grid;
}

.contact__info {
  row-gap: 2rem;
}

.contact__data {
  row-gap: .75rem;
}

.contact__data-title {
  font-size: var(--small-font-size);
  color: var(--text-color-light);
}

.contact__data-info {
  font-size: var(--small-font-size);
  font-family: var(--title-font);
  color: var(--title-color);
}

.contact__button {
  width: max-content;
  display: inline-flex;
  align-items: center;
  column-gap: .5rem;
  color: var(--title-color);
  font-size: var(--small-font-size);
}

.contact__button i {
  font-size: 1rem;
  transition: transform .3s;
}

.contact__button:hover i {
  transform: translateX(.25rem);
}

.contact__form {
  position: relative;
  row-gap: 2rem;
}

.contact__form-div {
  position: relative;
  height: 4rem;
}
/* ... */

